# pic2svg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.README/: img.ai
src/: main.cpp
